--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [project]
 name = "fancy-job"
 version = "0.1.0"
-description = "Add your description here"
+description = "Add your own description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [] 
 [project.optional-dependencies]
 llm = [
     "torch>=2.5.1",
